--- a/multilayer/index.html
+++ b/multilayer/index.html
@@ -9,6 +9,7 @@
     <script src="p5.js"></script>
     <script src="sketch.js"></script>
     <script src="nn.js"></script>
+    <script src="matrix.js"></script>
 </head>
 
 <body>
