--- a/quickdraw/web/index.html
+++ b/quickdraw/web/index.html
@@ -29,6 +29,7 @@
     <button id="guess">Guess</button><button id="clearB">Clear</button>
     <input type="number" id="learningrate" value="0.1">
     <span>Learning Rate</span>
+    <h1 id="guessanswer"></h1>
 </body>
 
 
